--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.ubirch</groupId>
   <artifactId>ubirch-protocol-java</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <licenses>
@@ -55,6 +53,7 @@
     <connection>scm:git:git://github.com/ubirch/ubirch-protocol-java.git</connection>
     <developerConnection>scm:git:git@github.com:ubirch/ubirch-protocol-java.git</developerConnection>
     <url>http://github.com/ubirch/ubirch-protocol-java</url>
+    <tag>ubirch-protocol-java-1.0.0</tag>
   </scm>
 
   <distributionManagement>
