--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,12 @@
   ~ limitations under the License.
   -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ubirch</groupId>
     <artifactId>ubirch-protocol-java</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -54,7 +53,7 @@
         <connection>scm:git:git://github.com/ubirch/ubirch-protocol-java.git</connection>
         <developerConnection>scm:git:git@github.com:ubirch/ubirch-protocol-java.git</developerConnection>
         <url>http://github.com/ubirch/ubirch-protocol-java</url>
-        <tag>HEAD</tag>
+        <tag>ubirch-protocol-java-2.0.0</tag>
     </scm>
 
     <distributionManagement>
