--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <ubirch-crypto.version>2.0.4-SNAPSHOT</ubirch-crypto.version>
         <jackson.version>2.9.8</jackson.version>
         <msgpack-core.version>0.8.16</msgpack-core.version>
-        <eddsa.version>0.1.0</eddsa.version>
-        <commons-codec.version>1.10</commons-codec.version>
+        <commons-codec.version>1.11</commons-codec.version>
 
         <!-- Logging -->
         <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -105,15 +105,17 @@
             <artifactId>msgpack-core</artifactId>
             <version>${msgpack-core.version}</version>
         </dependency>
-        <dependency>
-            <groupId>net.i2p.crypto</groupId>
-            <artifactId>eddsa</artifactId>
-            <version>${eddsa.version}</version>
-        </dependency>
-        <dependency>
+       <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ubirch</groupId>
+            <artifactId>ubirch-crypto</artifactId>
+            <version>${ubirch-crypto.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- basic unit testing (test)-->
