fix method access issue, fix tests, add protocol type enums

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,7 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-api.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
