--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.ubirch</groupId>
     <artifactId>ubirch-protocol-java</artifactId>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -53,7 +53,7 @@
         <connection>scm:git:git://github.com/ubirch/ubirch-protocol-java.git</connection>
         <developerConnection>scm:git:git@github.com:ubirch/ubirch-protocol-java.git</developerConnection>
         <url>http://github.com/ubirch/ubirch-protocol-java</url>
-        <tag>ubirch-protocol-java-2.1.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
