--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.ubirch</groupId>
     <artifactId>ubirch-protocol-java</artifactId>
-    <version>2.1.4-SNAPSHOT</version>
+    <version>2.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -73,7 +73,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <ubirch-crypto.version>2.0.6</ubirch-crypto.version>
-        <jackson.version>2.13.3</jackson.version>
+        <jackson-databind.version>2.13.4.2</jackson-databind.version>
+        <jackson.version>2.13.4</jackson.version>
         <msgpack-core.version>0.8.16</msgpack-core.version>
         <commons-codec.version>1.11</commons-codec.version>
         <checkstyle.version>10.3</checkstyle.version>
@@ -100,7 +101,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>org.msgpack</groupId>
