--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <ubirch-crypto.version>2.1.4</ubirch-crypto.version>
+        <ubirch-crypto.version>2.1.5-SNAPSHOT</ubirch-crypto.version>
         <jackson-databind.version>2.13.4.2</jackson-databind.version>
         <jackson.version>2.13.4</jackson.version>
         <msgpack-core.version>0.8.16</msgpack-core.version>
